# Graph-Pattern-Matching-Challenge

./: .gitignore  CMakeLists.txt  autocheck.sh  checeker.txt  checker.txt  show_graph.py  to_json.pl
checker/: CMakeLists.txt  checker.cc
checker_ex/: output.txt
include/: backtrack.h  candidate_set.h  checker.h  checkergraph.h  common.h  dag.h  graph.h
main/: main.cc
src/: backtrack.cc  candidate_set.cc  checkergraph.cc  dag.cc  graph.cc
test/backtrack_example/: data.igraph  query.cs
test/example/: example_query.cs
